tests/reject/newtype_agg_mix.ty
# An aggregate newtype stays distinct from its underlying type: a bare
# [int] is not an Ids, even though Ids = [int]. Must be a type error.
# NOTE: tychoc rejects this; tychoc0 does NOT (it stores zero-cost newtypes as
# their underlying type, so newtype identity is erased at declaration -- a
# documented less-strict limitation, with tychoc as the validating oracle).
# Skip-listed in tests/run.sh's tychoc0 reject check.
type Ids = [int]

fn total(xs: Ids) -> int:
    return len(to_under(xs))

fn main():
    raw := [1, 2, 3]
    print(str(total(raw)) + "\n")
